                                                         -*- coding: utf-8 -*-
  Changes with Apache Traffic Server 3.3.2


  *) [TS-1790] authproxy should accept 2xx as authorization success

  *) [TS-1780] Fix Debuntu build with hardening flags

  *) [TS-1623, TS-1625] Fixes for logging where the host name was not handled
    correctly because it was not in the URL.

  *) [TS-1754] Remove unecessary wWarnings from stats evaluation.
   Author: Yunkai Zhang.

  *) [TS-1169] Eliminate bogus asserts. Credits to Conan Wang.

  *) [TS-1764] Unify MAX/MIN definitions (in ink_defs.h). Also clean
   up the checks of gcc prior to v3.x (which we no longer support).

  *) [TS-1724] Add tool to compare records.config files to contrib
   Author: Mark Harrison <mark@mivok.net>

  *) [TS-1566] dynamic update for string vars does not work
   Author: Aidan McGurn <aidan.mcgurn@openwave.com>

  *) [TS-1708] Using tr-pass port option causes requests with large headers to hang

  *) [TS-1734] Remove dead code that invokes missing vmap_config tool
   Author: John Kew <john.v.kew.ii@gmail.com>

  *) [TS-1660] Host field should not has c style terminator.

  *) [TS-1627] Support requests with payload

  *) [TS-1763] add Arch Linux config.layout
   Author: Galen Sampson <galen.sampson@gmail.com>

  *) [TS-1749] Stats cluster values among nodes are not consistent.
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1758] Remove unused overviewPage aggregation functions.
   Author: Yunkai Zhang.

  *) [TS-1748] add jtest to the build

  *) [TS-1730] Supporting First Byte Flush for ESI plugin
   Author: Shu Kit Chan <chanshukit@gmail.com>

  *) [TS-1745] fix typos
   Author: Benjamin Kerensa <bkerensa@ubuntu.com>

  *) [TS-1671] remove AlarmListable from overviewRecord
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>

  *) [TS-1740] Improve precision of stats values
   Author: Yunkai Zhang <qiushu.zyk@taobao.com>
